--- a/xs-install-post.env
+++ b/xs-install-post.env
@@ -41,7 +41,7 @@ XS_GUESTAGENT="yes"
 # Install ifupdown2 for a virtual internal network allows rebootless networking changes (not compatible with openvswitch-switch)
 XS_IFUPDOWN2="yes"
 # Limit the size and optimise journald
-XS_JOURNALD="yes"
+XS_JOURNALD="no"
 # Install kernel source headers
 XS_KERNELHEADERS="yes"
 # Ensure ksmtuned (ksm-control-daemon) is enabled and optimise according to ram size
@@ -55,13 +55,13 @@ XS_LIMITS="yes"
 # Optimise logrotate
 XS_LOGROTATE="yes"
 # Lynis security scan tool by Cisofy
-XS_LYNIS="yes"
+XS_LYNIS="no"
 # Increase Max FS open files
 XS_MAXFS="yes"
 # Optimise Memory
 XS_MEMORYFIXES="yes"
 # Pretty MOTD BANNER
-XS_MOTD="yes"
+XS_MOTD="no"
 # Enable Network optimising
 XS_NET="yes"
 # Save bandwidth and skip downloading additional languages, requires XS_LANG="en_US.UTF-8"
